# dcrs

./: .gitignore  README.md  pyproject.toml
backend/: main.py  models.py  reviews.py  schemas.py
backend/models/: __init__.py  content.py  labels.py
backend/routers/: labels.py
blockchain/: Cargo.toml
blockchain-cli/: Cargo.toml
blockchain-cli/src/: main.rs
blockchain/src/: lib.rs
common-utils/: Cargo.toml  pyproject.toml
frontend/: package.json
governance/: pyproject.toml
monetcoin/: Cargo.toml
monetcoin/src/: block.rs  blockchain.rs  lib.rs  main.rs  transaction.rs  transactions.rs  wallets.rs
monetcoin/src/blockchain/: block.rs  blockchain.rs  consensus.rs  hashing.rs
monetcoin/src/cli/: mod.rs
monetcoin/src/governance/: governance.rs  mod.rs
monetcoin/src/p2p/: mod.rs
monetcoin/src/storage/: storage.rs
monetcoin/src/wallet/: mod.rs
monetview/: README.md  package-lock.json  package.json
monetview/src/components/: Home.vue  Post.vue  Review.vue
monetview/src/router/: index.js
storage-automation/: pyproject.toml
wallet/: pyproject.toml
