[tool.poetry]
name = "dcrs"
version = "0.1.0"
description = ""
authors = ["sempervent <jngrant9+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
